--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -18,6 +18,12 @@
   background-repeat: no-repeat
   background-position: center left
 
+.fondoBanner-2
+  background-image: url("../assets/curso/FondoBanner.jpg")
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center left
+  
 .colorText-verde
   color: #78B62E
 
