--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -12,6 +12,13 @@
   bottom: -85px
   right: -20px  
 
+.hijoHoja1
+  position: absolute
+  width: 194px
+  height: 174px
+  bottom: -110px
+  right: -520px 
+
 .fondoBanner-1
   background-image: url("../assets/curso/FondoBanner.jpg")
   background-size: cover
@@ -35,3 +42,6 @@
 
 .Text-grande
   font-size: 1.5em
+
+.AnchoMinimo
+  min-width: 200px
