--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,6 +1,15 @@
 .Neg-Izq
   margin-right: -80px
 
+.Neg-Der
+ margin-left: -100px 
+
+.Neg-Top
+  margin-top: -70px
+
+.Neg-Abajo
+  margin-bottom: -20px
+
 .Color-Bkg-Cajon
   background-color: #F5F5F5
   padding: 10px
@@ -30,6 +39,24 @@
   background-size: cover
   background-repeat: no-repeat
   background-position: center left
+
+.fondoBanner-2
+  background-image: url("../assets/curso/VerdeDegrade.jpg")
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center left
+
+.fondoBanner-3
+  background-image: url("../assets/curso/bgGris.png")
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center left
+
+.fondoBanner-4
+  background-image: url("../assets/curso/fondo.jpg")
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center left
   
 .colorText-verde
   color: #78B62E
@@ -39,6 +66,16 @@
 
 .bg-tabla-primario
   background-color: #3C6D9D
+
+.bg-tabla1
+  background-color: #12263F
+
+.bg1
+  background-color: #E8EEF3
+  padding-left: 20px
+  padding-top: 20px
+  padding-bottom: 20px
+  padding-right: 20px
 
 .Text-grande
   font-size: 1.5em
