--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,11 +1,20 @@
 .Neg-Izq
   margin-right: -80px
 
+.Neg-Izq140
+  margin-right: -140px
+
 .Neg-Der
- margin-left: -100px 
+  margin-left: -100px 
+
+.Neg-Der50
+  margin-left: -50px 
 
 .Neg-Top
   margin-top: -70px
+
+.Neg-Top140
+  margin-top: -140px
 
 .Neg-Abajo
   margin-bottom: -20px
@@ -35,12 +44,6 @@
   background-position: center left
 
 .fondoBanner-2
-  background-image: url("../assets/curso/FondoBanner.jpg")
-  background-size: cover
-  background-repeat: no-repeat
-  background-position: center left
-
-.fondoBanner-2
   background-image: url("../assets/curso/VerdeDegrade.jpg")
   background-size: cover
   background-repeat: no-repeat
@@ -57,6 +60,12 @@
   background-size: cover
   background-repeat: no-repeat
   background-position: center left
+
+.fondoBanner-5
+  background-image: url("../assets/curso/olasGrises.jpg")
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center left
   
 .colorText-verde
   color: #78B62E
@@ -64,11 +73,27 @@
 .bg-color-gris
   background-color:#e8e8e8
 
+.bg-color-azulClaro
+  background-color: #9CB5CD
+
+.bg-color-verde-claro
+  background-color: #BADA95
+
+.bg-color-grisClaro
+  background-color:#fffeee
+  margin-left: 10px
+  margin-right: 10px
+  margin-top: 10px
+
 .bg-tabla-primario
   background-color: #3C6D9D
 
 .bg-tabla1
   background-color: #12263F
+
+.bg-tabla2
+  background-color: #3C6D9D
+  border-radius: 5px
 
 .bg1
   background-color: #E8EEF3
@@ -77,8 +102,21 @@
   padding-bottom: 20px
   padding-right: 20px
 
+.bg2
+  background-color: #E8EEF3
+  
 .Text-grande
   font-size: 1.5em
 
+.Text-mediano
+  font-size: 1.3em
+
 .AnchoMinimo
   min-width: 200px
+
+.bordeVerde
+  border: 5px solid #5F9025
+
+.bordeGris
+  border: 1px solid #AFAFAF
+
